Fixed responsive overflow problem

--- a/css/_style.scss
+++ b/css/_style.scss
@@ -301,7 +301,7 @@ ul{
   }
 }
 
-.content_informations.panel section p {
+.content_informations.panel section p:nth-child(2) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
